--- a/src/components/CodeCell.css
+++ b/src/components/CodeCell.css
@@ -11,14 +11,36 @@
 	align-items: center;
 }
 
-.App button {
-	margin: 20px;
-}
-
 .App .code-output {
-	margin: 0 auto;
 	max-width: 500px;
+	background-color: #fff;
 	padding: 20px;
 	border: 1px solid #eee;
-	box-shadow: 1px 2px 1px #eee;
+}
+
+.code-cell {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 100%;
+}
+
+.code-cell__item.code-output {
+	background-color: #fff;
+}
+
+.code-cell__item.preview-wrapper {
+	position: relative;
+	height: 100%;
+	flex-grow: 1;
+}
+
+.editor-wrapper {
+	width: 100%;
+	height: 100%;
+}
+
+.code-cell .react-resizable {
+	display: flex;
+	z-index: 100;
 }
