--- a/src/components/CodeCell.css
+++ b/src/components/CodeCell.css
@@ -7,6 +7,7 @@
 .App form {
 	display: flex;
 	flex-direction: column;
+
 	justify-content: center;
 	align-items: center;
 }
@@ -20,6 +21,7 @@
 
 .code-cell {
 	display: flex;
+	position: relative;
 	flex-direction: row;
 	width: 100%;
 	height: 100%;
