--- a/src/components/TextEditor.css
+++ b/src/components/TextEditor.css
@@ -74,10 +74,13 @@ w-md-editor .title {
 }
 
 .card {
-	max-width: 300px;
 	margin: 0 auto;
 	box-shadow: 1px 2px 4px #202123;
 	text-align: center;
-	margin-top: 20px;
 	padding: 10px 6px;
+	position: relative;
+}
+
+.text-editor {
+	position: relative;
 }
